Fix: Setting header button width to 100% on small devices

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   
   .banner{
       margin-bottom: 20px;
@@ -20,12 +20,13 @@
     .banner form input{
       /*  height: 100px; */
     }
+    
     .banner form select.first-select{
         border-radius: 12px 12px 0 0;
     }
 
-    .banner form button{
-        width: 300px;
+    .banner form button {
+        width: 100%;
         border-radius: 0 0 12px 12px;
     }
 
